# sys-info

./: .Cargo.toml.un~  .gitignore  Cargo.toml  README.md  config.toml
.cargo/: .config.un~  config~
src/: config.rs  lib.rs  main.rs  result.rs  server.rs  system_info.rs
