[package]
name = "sys-info"
version = "0.1.0"
authors = ["tangjz <36634584@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heim = {version = "0.1.0-rc.1", features = ["full"] }
#heim-common = "0.0.11"
#heim = "0.0.11"
futures = "~0.3"
futures-timer = "~3.0"
local_ipaddress = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.62"
async-std = { version = "~1.7", features = ["attributes"] }