[package]
name = "sys-info"
version = "0.1.0"
authors = ["tangjz <36634584@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heim = {version = "0.1.0-rc.1", features = ["full"] }
futures = "~0.3"
futures-timer = "~3.0"
futures-ticker = "0.0.1"
local_ipaddress = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.62"
toml = "0.5.8"
actix-web = "3"
env_logger = "0.8"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"], default-features = false }
async-std = "1.9"
